Fixes Request Payload > first-level and text being-edited not visible

--- a/material-design-for-devtools/material-design-theme.css
+++ b/material-design-for-devtools/material-design-theme.css
@@ -4338,3 +4338,10 @@ body .inspector-view-toolbar.toolbar::shadow .toolbar-button-theme {
 .resources-dividers-label-bar {
   background-color: #3e4c58 !important;
 }
+/* Fix for Network/Request Payload/first level of expansion */
+* {
+  color: #b1bdc4 !important;
+}
+span.being-edited {
+  color: #cdd3de !important;
+}
